--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
          <!--    <header>
                 <h2>nOUS REALISONS TOUT VOS ENVIES</h2>
             </header> -->
-			<p>Pour permettre aux consommateurs qui se dirigent  vers plusieurs entreprises en vue de satisfaire leurs multiples besoins l’un après l’autre, de gagner du temps et de fournir moins d’effort, en trouvant les différents produits et services adaptés à leurs besoins et désirs au sein d’une seule et même société en un clic, GOLDEN INSTINCT se présente comme étant la solution idéale.				
-En poursuivant votre navigation sur cette page, vous découvrirez les différents produits et services proposés par<span style="color:#4691cb">GOLDEN INSTINCT</span> .
+			<p>Pour permettre aux consommateurs qui se dirigent  vers plusieurs entreprises en vue de satisfaire leurs multiples besoins l’un après l’autre, de gagner du temps et de fournir moins d’effort, en trouvant les différents produits et services adaptés à leurs besoins et désirs au sein d’une seule et même société en un clic, <span style="color:#4691cb">GOLDEN INSTINCT</span> se présente comme étant la solution idéale.				
+En poursuivant votre navigation sur cette page, vous découvrirez les différents produits et services proposés par <span style="color:#4691cb">GOLDEN INSTINCT</span>.
 				</p>
             <ul class="actions">
                 <li><a  href="#" class="button alt">En savoir plus</a></li>
